# f2-printer

./: .gitignore  README.md  install.sh  pyproject.toml  root-install.sh  start.sh
.devcontainer/: Dockerfile  devcontainer.json
f2_printer/: main.py
